[package]
name = "sajl"
version = "0.1.0"
edition = "2024"
description = "Simple Async JSON Logger"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joswayski/sajl"
keywords = ["json", "structured", "logging" ]


[dependencies]
chrono = "0.4.42"
owo-colors = "4.2.3"
serde = { features = ["derive"], version = "1.0.228"}
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["sync", "time", "rt-multi-thread", "macros"]}



